2005-10-30  Giuseppe Sacco <eppesuig@debian.org>

	* po/*it.po: Updated italian translation

2005-10-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/artec_eplus48u.conf
	  doc/descriptions/artec_eplus48u.desc: Added support for Trust
	  240H Easy Webscan Gold to artec_eplus48u backend.
	* Makefile.in acinclude.m4 configure configure.in
	  backend/Makefile.in frontend/Makefile.in lib/Makefile.in
	  sanei/Makefile.in tools/Makefile.in: 
	  Run "makedepend" if it's available. This way "make" builds
	  backends correctly even if only included files (e.g. headers) are
	  changed. Don't be too verbose when running makedepend.
	  Create links libsane-*.so.1 to the real library files if the
	  links are not there. This fixes dynamic loading on OpenBSD. The
	  links are not created for MacOS X as they don't work there.
	  Remove any libsane.* links in /usr/local/lib/sane. Such links
	  are created by libtool. As they point to libsane-v4l.so,
	  scanimage -L doesn't find any scanner in case of ld.so
	  misconfigurations. 
	  The install target is much quiter now and prints the libtool
	  message only once now.
	* README.openbsd: Removed comment about broken library links.

2005-10-28  Gerhard Jaeger <gerhard@gjaeger.de>

	* po/*.po: Updated po files, corrected/updated german translation.
	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c backend/plustek.h: Added OPTION_SPEEDUP.
	* backend/plustek-usbdevs.c: Changed high-speed setting for 
	  UMAX 3400, due to bugreport #302317.
	  Fixed CanoScan N650U settings (bugreport #302433).

2005-10-25  Gerhard Jaeger <gerhard@gjaeger.de>

	* doc/plustek/Plustek-USB.changes: Update.
	* backend/plustek.c: Bumped build number.
	* backend/plustek-usbdevs.c: Tweaked LiDE25 settings.
	* backend/plustek-usb.c: Let CIS devices use green-channel
      for gray scans.
	* backend/plustek-usbcal.c: Fixed segfault condition in fine
      calibration for gray scanmodes.
