@@ -56,7 +56,7 @@ usb 0x04a5 0x20b0
 # Benq/Acer/Vuego 4300
 usb 0x04a5 0x20de
 
-# Benq 5000S
+# Benq 5000E / 5000U
 usb 0x04a5 0x20f8
 
 # Benq 5000
